--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*main styles*/
 body{
     margin: 0px;
 }
@@ -6,7 +7,7 @@ body{
     display: grid;
     grid-template-columns: 1fr;
 }
-
+/* nav styles */
 .nav-wrapper {
     display: flex;
     justify-content: space-between;
@@ -40,4 +41,6 @@ body{
  .nav-link-wrapper a:hover{
      color: black;
  }
+
+ /* portfolio styles */
  
