--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,124 @@
-/*main styles*/
-body{
+body {
+    font-family: "Lato", sans-serif;
     margin: 0px;
-}
-
-.container {
+  }
+  
+  .container {
     display: grid;
     grid-template-columns: 1fr;
-}
-/* nav styles */
-.nav-wrapper {
+  }
+  
+  .nav-wrapper {
     display: flex;
     justify-content: space-between;
-    padding: 30px;
-
-}
-.left-side {
+    padding: 15px;
+    background-color: black;
+  }
+  
+  .left-side {
     display: flex;
-}
-.nav-wrapper > .left-side > div {
+  }
+  .right-side{
+      color: white;
+  }
+  .nav-wrapper > .left-side > div {
     margin-right: 20px;
-    font-size: 0.9em;
     text-transform: uppercase;
-
-
-}
-.nav-link-wrapper{
+    font-size: 0.9rem;
+  }
+  
+  .nav-link-wrapper {
     height: 22px;
     border-bottom: 1px solid transparent;
     transition: border-bottom 0.5s;
-}
-.nav-link-wrapper a {
-    color: #8a8a8a;
+  }
+  
+  .active-nav-link {
+    border-bottom: 1px solid whitesmoke;
+  }
+  
+  .active-nav-link a {
+    color: whitesmoke !important;
+  }
+  
+  .nav-link-wrapper a {
+    color: #f0eaea;
     text-decoration: none;
     transition: color 0.5s;
-
-}
- .nav-link-wrapper:hover{
-     border-bottom: 1px solid black;
- } 
- .nav-link-wrapper a:hover{
-     color: black;
- }
-
- /* portfolio styles */
- 
+  }
+  
+  .nav-link-wrapper:hover {
+    border-bottom: 1px solid white;
+  }
+  
+  .nav-link-wrapper a:hover {
+    color: lightblue;
+  }
+  
+  .portfolio-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  
+  .portfolio-item-wrapper {
+    position: relative;
+  }
+  
+  .portfolio-img-background {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 350px;
+    width: 100%;
+  }
+  
+  .img-text-wrapper {
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  
+  .img-text-wrapper .subtitle {
+    transition: 1s;
+    color: transparent;
+  }
+  
+  .image-blur {
+    transition: 1s;
+    filter: brightness(10%);
+  }
+  
+  .img-text-wrapper:hover .subtitle {
+    color: lightseagreen;
+    font-weight: 600;
+  }
+  
+  .logo-wrapper img {
+    width: 50%;
+    margin-bottom: 20px;
+  }
+  
+  .two-column-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  
+  .profile-image-wrapper img {
+    width: 100%;
+  }
+  
+  .profile-content-wrapper {
+    padding: 30px;
+  }
+  
+  .profile-content-wrapper h1 {
+    color: lightseagreen;
+  }
+  
